Add WMS tile helper and update notebooks

--- a/notebooks/cwfis.ipynb
+++ b/notebooks/cwfis.ipynb
@@ -45,13 +45,23 @@
     }
    ],
    "source": [
-    "from alviaorange import fetch_fire_weather_index\n",
-    "import plotly.express as px\n",
+    "from alviaorange import fire_danger_wms_tile_url\n",
+    "import plotly.graph_objects as go\n",
     "\n",
-    "data = fetch_fire_weather_index('2024-01-01')\n",
-    "features = data.get('features', [])\n",
-    "values = [f['properties'].get('FWI') for f in features if 'properties' in f] \n",
-    "fig = px.histogram(values, nbins=20, title='Fire Weather Index distribution')\n",
+    "mapbox_access_token = 'YOUR_MAPBOX_ACCESS_TOKEN'\n",
+    "url = fire_danger_wms_tile_url('20230401')\n",
+    "\n",
+    "fig = go.Figure(go.Scattermapbox())\n",
+    "fig.update_layout(\n",
+    "    mapbox=dict(\n",
+    "        accesstoken=mapbox_access_token,\n",
+    "        style='open-street-map',\n",
+    "        center=dict(lat=50, lon=-95),\n",
+    "        zoom=3,\n",
+    "        layers=[dict(sourcetype='raster', source=[url], below='traces', opacity=0.7)]\n",
+    "    ),\n",
+    "    margin={'r':0,'t':0,'l':0,'b':0}\n",
+    ")\n",
     "fig.show()"
    ]
   }
