--- a/notebooks/fetch_fire_danger.ipynb
+++ b/notebooks/fetch_fire_danger.ipynb
@@ -45,14 +45,23 @@
     }
    ],
    "source": [
-    "from alviaorange import fetch_fire_danger\n",
-    "import plotly.express as px\n",
+    "from alviaorange import fire_danger_wms_tile_url\n",
+    "import plotly.graph_objects as go\n",
     "\n",
-    "data = fetch_fire_danger('2024-01-01')\n",
-    "features = data.get('features', []) if isinstance(data, dict) else data\n",
-    "fig = px.bar(x=['count'], y=[len(features)],\n",
-    "             labels={'x': 'Dataset', 'y': 'Count'},\n",
-    "             title='Fire Danger Ratings')\n",
+    "token = 'YOUR_MAPBOX_ACCESS_TOKEN'\n",
+    "tile = fire_danger_wms_tile_url('20230401')\n",
+    "\n",
+    "fig = go.Figure(go.Scattermapbox())\n",
+    "fig.update_layout(\n",
+    "    mapbox=dict(\n",
+    "        accesstoken=token,\n",
+    "        style='open-street-map',\n",
+    "        center=dict(lat=50, lon=-95),\n",
+    "        zoom=3,\n",
+    "        layers=[dict(sourcetype='raster', source=[tile], below='traces', opacity=0.7)]\n",
+    "    ),\n",
+    "    margin={'r':0,'t':0,'l':0,'b':0}\n",
+    ")\n",
     "fig.show()"
    ]
   }
